feat: attempt to make mixns work