@@ -1,2 +1,6 @@
 # cube_tide
 A new stupid Minecraft mod loader, made with Kotlin, just because I can.
+
+
+* Make sure to add `--add-opens java.base/sun.misc=ALL-UNNAMED` to your JVM options
+if you're running on newer JVMs that have stricter access control to `Unsafe`.
